# misc-code-samples

./: .gitignore  README.md
C/: PIDigits.c  README.md
C#/: README.md
C#/base/collections/: Arrays.cs  CollectionInterfaces.cs  DataStructures.cs  Program.cs  collections.sln
C#/base/concurrency/: Async.cs  Program.cs  Threading.cs  concurrency.sln
C#/base/events/: Events.sln
C#/base/garbage_collection/: Disposal.cs  GarbageCollector.cs  Program.cs  garbage_collection.sln
C#/base/iterators/: Iterators.sln
C#/base/linq_basics/: InterpretedQueries.cs  Program.cs  Queries.cs  README.md  linq_basics.csproj  linq_basics.sln
C#/base/practice/: IncreaseDecreaseString.cs
C#/base/streams/: Program.cs  Streams.cs  streams.csproj  streams.sln
C#/base/unsafe/: Unsafe.sln
C/base/data_structures/: CMakeLists.txt  DataStructuresConfig.h  README.md  cmake.sh  setup.sh  unsorted_array.c
C/base/data_structures/src/: CMakeLists.txt  unsorted_array.c  unsorted_array.h
C/base/data_structures/test/: CMakeLists.txt  test_unsorted_array.c
C/base/practice/: NextPrime.c  fibonacci.c
Go/base/practice/: createTargetArray.go
GraphQL/base/getting-started/: basicQueries.graphql
Java/: BinaryDecimal.java  CheckPermutation.java  Fibonacci.java  PrimeFactors.java  README.md  UniqueCharacters.java  UnitConverter.java
Java/Calculator/: .classpath  pom.xml
Java/CityDistance/: City.java  CityDistance.java
Java/FamilyTree/: FamilyService.java  FamilyTree.java  Person.java
Java/base/basic-types/: Convert.java  Equality.java  Main.java
Java/base/basic_types/: Convert.java  Equality.java  Main.java
Java/base/collections/: AndyList.java  CollectionInterfaces.java  DataStructures.java  Main.java
Java/base/concurrency/: Threading.java
Java/base/data_structures/: UnsortedArray.java
Java/base/interview/: CheckPermutation.java  FlipAndInvertImage.java  FlipMatrixMax.java  IpAddress.java  LinkedListIntersection.java  PalindromePermutation.java  Partition.java  ReturnKthToLast.java  RotateMatrix.java  StringCompression.java  StringRotation.java  SumLists.java  ZeroMatrix.java
Java/base/practice/: CoverCost.java  EDigits.java  PIDigits.java
JavaScript/: README.md
JavaScript/base/interview/: sortArrayEvenOdd.js
JavaScript/base/practice/: evenNumberDigits.js  evenNumberDigits.test.js  package-lock.json  package.json  setup.sh
JavaScript/google-apps-script/: onOpen.gs
PHP/base/: greatestElementRight.php
Python/: PIDigit.py  README.md
Python/base/: README.md
Python/base/concurrency/: Pipfile  README.md  aiohttpConcurrent.py  asyncioCoroutines.py  concurrentFutures.py  request.py  setup.ps1  test.py  threadpoolexecutor.py
Python/base/interview/: NaryTreeNode.py  TreeNode.py  addTwoNumbers.py  allPaths.py  allPossibleFullBinaryTrees.py  arrayUniqueOccurrences.py  balanced_string.py  binarySearchTreeSum.py  clockAngle.py  dfs.py  distBetweenBinaryTreeNodes.py  hammingDistance.py  heightChecker.py  letterTilePossibilities.py  maxScoreWords.py  (+12 more)
Ruby/: PIDigit.rb  README.md
SQL/: README.md
VisualBasic/base/: helloworld.vb
(+170 files in other folders)
